--- a/client/src/Introduction.module.css
+++ b/client/src/Introduction.module.css
@@ -8,18 +8,43 @@
           "wdth" 100;
 }
 
-#title {
+#pole {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 42px;
   height: 35px;
-  margin: 0;
-  color: #1d1d1d;
+  margin: 4px;
+  color: #121030;
+  letter-spacing: 3px;
+}
+
+#chat {
+  color: #30317b;
+}
+
+#pole::before,
+#pole::after {
+  background-color: #1e90ff;
+  content: "";
+  height: 5px;
+  width: 60px;
+}
+
+#pole::before {
+  margin-right: 15px;
+}
+
+#pole::after {
+  margin-left: 15px;
 }
 
 #subtitle {
   font-weight: 700;
   font-size: 18px;
   height: 20px;
-  margin: 0;
+  margin: 5px;
   color: #646464;
+}
+
+#loginButton {
+  margin: 10px;
 }
